--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "scasto",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ayush23719.github.io/scasto/",
   "dependencies": {
     "cra-template": "1.2.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
