--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "scasto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ayush23719.github.io/scasto/",
+  "homepage": "https://ayush23719.github.io/Scasto/",
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-3-card": "^0.2.0",
     "cra-template": "1.2.0",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-buttons": "^1.0.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1"
