--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://ayush23719.github.io/Scasto/",
   "dependencies": {
+    "@coreui/coreui": "^4.1.5",
+    "@coreui/react": "^4.2.2",
     "bootstrap": "^5.1.3",
     "bootstrap-3-card": "^0.2.0",
     "cra-template": "1.2.0",
@@ -13,7 +15,8 @@
     "react-bootstrap-buttons": "^1.0.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "sass": "^1.52.1"
   },
   "scripts": {
     "start": "react-scripts start",
