--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-buttons": "^1.0.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
-    "react-particles-js": "^3.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1"
