--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scasto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ayush23719.github.io/Scasto/Home",
+  "homepage": "/",
   "dependencies": {
     "@coreui/coreui": "^4.1.5",
     "@coreui/react": "^4.2.2",
